--- a/backend/package.json
+++ b/backend/package.json
@@ -7,22 +7,27 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint src",
+    "format": "eslint src --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/passport-local": "^1.0.38",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -39,9 +44,10 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "jest": "^29.5.0",
     "lint-staged": "^15.2.10",
+    "pinst": "^3.0.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "standard": "^17.1.0",
@@ -53,6 +59,9 @@
     "typescript": "^5.1.3"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
-  }
+    "lint-staged": {
+      "src/**/*.{js,jsx,ts,tsx,json}": "eslint --fix",
+      "src/**/*.{css,scss,md}": "prettier --write"
+    }
+  } 
 }
