--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,11 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "lint-staged": {
       "src/**/*.{js,jsx,ts,tsx,json}": "eslint --fix",
