--- a/package.json
+++ b/package.json
@@ -6,11 +6,24 @@
     "praise-app-frontend"
   ],
   "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "pinst": "^3.0.0"
+    "pinst": "^3.0.0",
+    "prettier": "^3.0.0",
+    "standard": "^17.1.0",
+    "typescript": "4.7.4",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "scripts": {
+    "lint": "eslint . --fix --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky"
   },
   "lint-staged": {
