--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": "eslint --cache --fix --report-unused-disable-directives --max-warnings 0",
+    "*.{ts,tsx,js,jsx}": "eslint --fix --report-unused-disable-directives --max-warnings 0",
     "*.{css,scss,md}": "prettier --write"
   }
 }
