--- a/backend/nest/package.json
+++ b/backend/nest/package.json
@@ -5,7 +5,13 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "type": "commonjs",
   "scripts": {
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:migrate": "node scripts/migration-migrate.js",
+    "migration:create": "node scripts/migration-create.js",
+    "migration:revert": "node scripts/migration-revert.js",
+    "migration:generate": "node scripts/migration-generate.js",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -46,6 +52,7 @@
     "@types/supertest": "^6.0.0",
     "jest": "^29.5.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2"
   }
 }
