--- a/backend/nest/package.json
+++ b/backend/nest/package.json
@@ -8,10 +8,10 @@
   "type": "commonjs",
   "scripts": {
     "typeorm": "typeorm-ts-node-commonjs",
-    "migration:migrate": "node scripts/migration-migrate.js",
-    "migration:create": "node scripts/migration-create.js",
-    "migration:revert": "node scripts/migration-revert.js",
-    "migration:generate": "node scripts/migration-generate.js",
+    "migrations:migrate": "node scripts/migration-migrate.js",
+    "migrations:create": "node scripts/migration-create.js",
+    "migrations:revert": "node scripts/migration-revert.js",
+    "migrations:generate": "node scripts/migration-generate.js",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -28,9 +28,11 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "argon2": "^0.41.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
