--- a/backend/nest/.env.example
+++ b/backend/nest/.env.example
@@ -1,1 +1,8 @@
 JWT_SECRET=
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
