--- a/backend/nest/.prettierrc
+++ b/backend/nest/.prettierrc
@@ -3,5 +3,6 @@
     "printWidth": 80,
     "trailingComma": "none",
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "endOfLine": "auto"
 }
